tests/errors/test_67.x
// No such type in module

import std;

fn main() -> void {

    let x = std::B { 2 };

}
